--- a/serve/serve.yaml
+++ b/serve/serve.yaml
@@ -49,3 +49,18 @@ applications:
         ray_actor_options:
           num_cpus: 1.0
           num_gpus: 0.0
+
+  - name: e2e_asr
+
+    route_prefix: /
+
+    import_path: e2e_asr:asr_app
+
+    runtime_env: {}
+
+    deployments:
+      - name: ASRServer
+        num_replicas: 1
+        ray_actor_options:
+          num_cpus: 2.0
+          num_gpus: 0.0
