--- a/.github/workflows/deploy-ui.yaml
+++ b/.github/workflows/deploy-ui.yaml
@@ -35,6 +35,7 @@ jobs:
         with:
           node-version: 20
           cache: "npm"
+          cache-dependency-path: "./asr-ui/yarn.lock"
       - name: Install dependencies
         working-directory: asr-ui
         run: npm ci
