fix(ci): update to use yarn

--- a/.github/workflows/deploy-ui.yaml
+++ b/.github/workflows/deploy-ui.yaml
@@ -34,14 +34,14 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: "npm"
+          cache: "yarn"
           cache-dependency-path: "./asr-ui/yarn.lock"
       - name: Install dependencies
         working-directory: asr-ui
-        run: npm ci
+        run: yarn install --frozen-lockfile
       - name: Build
         working-directory: asr-ui
-        run: npm run build
+        run: yarn build
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
