fix(ci): recorder deps

--- a/asr-ui/package.json
+++ b/asr-ui/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "extendable-media-recorder": "^9.1.12",
+    "extendable-media-recorder-wav-encoder": "^7.0.107",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-mic": "^12.4.6"
